Modify views when there is pagination to properly manage the request.form

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -61,7 +61,7 @@
           <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
               <li>
-                <a href="#"><i class="fa fa-wrench fa-fw"></i> BOA management<span class="fa arrow"></span></a>
+                <a href="#" id="boa-management-menu"><i class="fa fa-wrench fa-fw"></i> BOA management<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                   <li>
                     <a href="#" onclick="vboa.request_switch_on_off_orc()"><i id="orc-indicator" class="circle red-circle"></i><span> Orchestrator</a>
