Correct EBOA navigation pannel to manage filters using a python dict

--- a/src/vboa/templates/eboa_nav/gauges_nav.html
+++ b/src/vboa/templates/eboa_nav/gauges_nav.html
@@ -13,7 +13,7 @@
   </div>
   {% if filters["offset"][0]|int == 0 %}
   {% set filters_to_forward = filters.copy() %}
-  {% do filters_to_forward.__setitem__("offset", filters_to_forward["offset"][0]|int + filters_to_forward["limit"][0]|int) %}
+  {% do filters_to_forward.__setitem__("offset", [filters_to_forward["offset"][0]|int + filters_to_forward["limit"][0]|int]) %}
   <div class="panel-body" style="text-align:center">
     <a href="#" onclick='vboa.request_info_json("/eboa_nav/query-gauges-pages", vboa.render_page, {{ filters_to_forward|tojson }})'>Next >></a>
   </div>
@@ -21,8 +21,8 @@
   <div class="panel-body" style="text-align:center">
     {% set filters_to_forward_prev = filters.copy() %}
     {% set filters_to_forward_next = filters.copy() %}
-    {% do filters_to_forward_prev.__setitem__("offset", filters_to_forward_prev["offset"][0]|int - filters_to_forward_prev["limit"][0]|int) %}
-    {% do filters_to_forward_next.__setitem__("offset", filters_to_forward_next["offset"][0]|int + filters_to_forward_next["limit"][0]|int) %}
+    {% do filters_to_forward_prev.__setitem__("offset", [filters_to_forward_prev["offset"][0]|int - filters_to_forward_prev["limit"][0]|int]) %}
+    {% do filters_to_forward_next.__setitem__("offset", [filters_to_forward_next["offset"][0]|int + filters_to_forward_next["limit"][0]|int]) %}
     <a href="#" onclick='vboa.request_info_json("/eboa_nav/query-gauges-pages", vboa.render_page, {{ filters_to_forward_prev|tojson }})'><< Prev</a><p style="display: inline"> | </p><a href="#" onclick='vboa.request_info_json("/eboa_nav/query-gauges-pages", vboa.render_page, {{ filters_to_forward_next|tojson }})'>Next >></a>
   </div>
   {% endif %}
@@ -34,7 +34,7 @@
   </div>
   <div class="panel-body" style="text-align:center">
     {% set filters_to_forward_prev = filters.copy() %}
-    {% do filters_to_forward_prev.__setitem__("offset", filters_to_forward_prev["offset"][0]|int - filters_to_forward_prev["limit"][0]|int) %}
+    {% do filters_to_forward_prev.__setitem__("offset", [filters_to_forward_prev["offset"][0]|int - filters_to_forward_prev["limit"][0]|int]) %}
     <a href="#" onclick='vboa.request_info_json("/eboa_nav/query-gauges-pages", vboa.render_page, {{ filters_to_forward_prev|tojson }})'><< Prev</a>
   </div>
 </div>
