--- a/src/vboa/templates/rboa_nav/query_reports_content.html
+++ b/src/vboa/templates/rboa_nav/query_reports_content.html
@@ -105,6 +105,16 @@
                 </select>
               </div>
             </div>
+            <div>
+              <label id="reports-show-validity-timeline">
+                <input type="checkbox" id="show-timeline" name="show_validity_timeline" checked><span class="label-text"><b>Show validity timeline</b></span>
+              </label>
+            </div>
+            <div>
+              <label id="reports-show-generation-duration-xy">
+                <input type="checkbox" id="show-generation-duration-xy" name="show_generation_duration_xy" checked><span class="label-text"><b>Show generation duration over time per report</b></span>
+              </label>
+            </div>
             <!-- Query restrictions -->
             <div class="row" id="reports-query-restrictions">
               <!-- Order by -->
