Add interface for generating reports of the view ingestion control

--- a/src/vboa/templates/rboa_nav/reports_nav.html
+++ b/src/vboa/templates/rboa_nav/reports_nav.html
@@ -53,10 +53,10 @@
           <th>Generation mode</th>
           <th>Validity start</th>
           <th>Validity stop</th>
-          <th>Validity Duration (s)</th>
+          <th>Validity Duration (m)</th>
           <th>Generation start</th>
           <th>Generation stop</th>
-          <th>Generation Duration (s)</th>
+          <th>Generation Duration (m)</th>
           <th>Report group</th>
           <th>Generator</th>
           <th>Version</th>
