--- a/src/vboa/templates/ingestion_control/ingestion_control_errors_content.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_errors_content.html
@@ -20,15 +20,15 @@
             <th>Ingestion progress</th>
             <th>Processor progress</th>
             <th>Ingestion completeness</th>
-            <th>Triggering Duration</th>
-            <th>Ingestion Duration</th>
-            <th>Processing Duration</th>
+            <th>Triggering duration</th>
+            <th>Ingestion duration</th>
+            <th>Processing duration</th>
             <th>Validity start</th>
             <th>Validity stop</th>
             <th>Duration</th>
             <th>Reception time</th>
             <th>Generation time</th>
-            <th>Ingestion Time</th>
+            <th>Ingestion time</th>
             <th>Processor</th>
             <th>Processor version</th>
           </tr>
@@ -80,15 +80,15 @@
             <th>Ingestion progress</th>
             <th>Processor progress</th>
             <th>Ingestion completeness</th>
-            <th>Triggering Duration</th>
-            <th>Ingestion Duration</th>
-            <th>Processing Duration</th>
+            <th>Triggering duration</th>
+            <th>Ingestion duration</th>
+            <th>Processing duration</th>
             <th>Validity start</th>
             <th>Validity stop</th>
             <th>Duration</th>
             <th>Reception time</th>
             <th>Generation time</th>
-            <th>Ingestion Time</th>
+            <th>Ingestion time</th>
             <th>Processor</th>
             <th>Processor version</th>
           </tr>
