--- a/src/vboa/templates/reporting_control/reporting_control.html
+++ b/src/vboa/templates/reporting_control/reporting_control.html
@@ -5,39 +5,12 @@
 </div>
 <!-- /.row -->
 {% include "reporting_control/reporting_control_query.html" %}
-{% if filters and "limit" in filters and filters["limit"][0] != "" and filters["limit"][0]|int == reports|length %}
-<div class="panel panel-yellow">
-  <div class="panel-heading">
-    The number of requested elements is higher than the limit of the query, you can navigate through all the list using the following links:
-  </div>
-  {% if filters["offset"][0]|int == 0 %}
-  {% set filters_to_forward = filters.copy() %}
-  {% do filters_to_forward.__setitem__("offset", [filters_to_forward["offset"][0]|int + filters_to_forward["limit"][0]|int]) %}
-  <div class="panel-body" style="text-align:center">
-    <a href="#" onclick='vboa.request_info_json("/reporting_control/reporting-control-pages", vboa.render_page, {{ filters_to_forward|tojson }})'>Next >></a>
-  </div>
-  {% else %}
-  <div class="panel-body" style="text-align:center">
-    {% set filters_to_forward_prev = filters.copy() %}
-    {% set filters_to_forward_next = filters.copy() %}
-    {% do filters_to_forward_prev.__setitem__("offset", [filters_to_forward_prev["offset"][0]|int - filters_to_forward_prev["limit"][0]|int]) %}
-    {% do filters_to_forward_next.__setitem__("offset", [filters_to_forward_next["offset"][0]|int + filters_to_forward_next["limit"][0]|int]) %}
-    <a href="#" onclick='vboa.request_info_json("/reporting_control/reporting-control-pages", vboa.render_page, {{ filters_to_forward_prev|tojson }})'><< Prev</a><p style="display: inline"> | </p><a href="#" onclick='vboa.request_info_json("/reporting_control/reporting-control-pages", vboa.render_page, {{ filters_to_forward_next|tojson }})'>Next >></a>
-  </div>
-  {% endif %}
-</div>
-{% elif filters and "limit" in filters and filters["offset"][0]|int > 0 and reports|length < filters["limit"][0]|int %}
-<div class="panel panel-yellow">
-  <div class="panel-heading">
-    All the elements have been reviewed, you can go to the previous pages:
-  </div>
-  <div class="panel-body" style="text-align:center">
-    {% set filters_to_forward_prev = filters.copy() %}
-    {% do filters_to_forward_prev.__setitem__("offset", [filters_to_forward_prev["offset"][0]|int - filters_to_forward_prev["limit"][0]|int]) %}
-    <a href="#" onclick='vboa.request_info_json("/reporting_control/reporting-control-pages", vboa.render_page, {{ filters_to_forward_prev|tojson }})'><< Prev</a>
-  </div>
-</div>
-{% endif %}
+
+<!-- Pagination -->
+{% with route = "/reporting_control/reporting-control-pages", elements = reports, filters = filters %}
+{% include "vboa/pagination.html" %}
+{% endwith %}
+
 {% set alerts = reports|rejectattr("alerts", "equalto", [])|map(attribute="alerts")|list|flatten %}
 {% include "reporting_control/reporting_control_alerts_content.html" %}
 {% set reporting_errors = reports|selectattr("generation_error", "equalto", True)|list %}
