--- a/src/vboa/templates/vboa/pagination.html
+++ b/src/vboa/templates/vboa/pagination.html
@@ -1,4 +1,8 @@
-{% if filters and "limit" in filters and filters["limit"][0] != "" and filters["limit"][0]|int == elements|length %}
+{% if filters and "limit" in filters %}
+{% set filters_to_show_all = filters.copy() %}
+{% do filters_to_show_all.__setitem__("offset", [0]) %}
+{% do filters_to_show_all.__setitem__("limit", [""]) %}
+{% if filters["limit"][0] != "" and filters["limit"][0]|int == elements|length %}
 <div class="panel panel-yellow">
   <div class="panel-heading">
     The number of requested elements is higher than the limit of the query, you can navigate through all the list using the following links:
@@ -8,6 +12,8 @@
   {% do filters_to_forward.__setitem__("offset", [filters_to_forward["offset"][0]|int + filters_to_forward["limit"][0]|int]) %}
   <div class="panel-body" style="text-align:center">
     <a href="#" onclick='vboa.request_info_json("{{ route }}", vboa.render_page, {{ filters_to_forward|tojson }})'>Next >></a>
+    <br/>
+    <a href="#" onclick='vboa.request_info_json("{{ route }}", vboa.render_page, {{ filters_to_show_all|tojson }})'>Show all >></a>
   </div>
   {% else %}
   <div class="panel-body" style="text-align:center">
@@ -16,10 +22,12 @@
     {% do filters_to_forward_prev.__setitem__("offset", [filters_to_forward_prev["offset"][0]|int - filters_to_forward_prev["limit"][0]|int]) %}
     {% do filters_to_forward_next.__setitem__("offset", [filters_to_forward_next["offset"][0]|int + filters_to_forward_next["limit"][0]|int]) %}
     <a href="#" onclick='vboa.request_info_json("{{ route }}", vboa.render_page, {{ filters_to_forward_prev|tojson }})'><< Prev</a><p style="display: inline"> | </p><a href="#" onclick='vboa.request_info_json("{{ route }}", vboa.render_page, {{ filters_to_forward_next|tojson }})'>Next >></a>
+    <br/>
+    <a href="#" onclick='vboa.request_info_json("{{ route }}", vboa.render_page, {{ filters_to_show_all|tojson }})'>Show all >></a>
   </div>
   {% endif %}
 </div>
-{% elif filters and "limit" in filters and filters["offset"][0]|int > 0 and elements|length < filters["limit"][0]|int %}
+{% elif filters["offset"][0]|int > 0 and elements|length < filters["limit"][0]|int %}
 <div class="panel panel-yellow">
   <div class="panel-heading">
     All the elements have been reviewed, you can go to the previous pages:
@@ -28,6 +36,9 @@
     {% set filters_to_forward_prev = filters.copy() %}
     {% do filters_to_forward_prev.__setitem__("offset", [filters_to_forward_prev["offset"][0]|int - filters_to_forward_prev["limit"][0]|int]) %}
     <a href="#" onclick='vboa.request_info_json("{{ route }}", vboa.render_page, {{ filters_to_forward_prev|tojson }})'><< Prev</a>
+    <br/>
+    <a href="#" onclick='vboa.request_info_json("{{ route }}", vboa.render_page, {{ filters_to_show_all|tojson }})'>Show all >></a>
   </div>
 </div>
+{% endif %}
 {% endif %}
